# Stride

./: ARCHITECTURE.md  CMakeLists.txt  HAPTICS_GUIDE.md  Kconfig  MODULE_DIAGRAM.txt  POWER_MANAGEMENT_GUIDE.md  README_STRUCTURE.md  XIAO_SETUP.md  app.overlay  prj.conf
.cursor/rules/: no-md-files.mdc
src/: Kconfig  main.c
src/drivers/: gpio.c
src/drivers/haptics/: drv2605l.c  drv2605l.h
src/include/ble/: ble_service.h
src/include/gpio/: gpio.h
src/include/haptics/: haptic_service.h
src/include/os/: threads.h
src/include/power/: power_mgmt.h
src/include/uart/: uart_service.h
src/os/threads/: threads.c
src/power/: power_mgmt.c
src/services/ble/: ble_service.c
src/services/haptics/: haptic_service.c
src/services/uart/: uart_service.c
